--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,8 @@
 
 @import url(../blocks/content/content.css);
 
+@import url(../blocks/link/link.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
