--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -7,9 +7,8 @@
 }
 @media screen and (max-width: 767px) {
     .place__image {
-        max-width: 100vw;
+        min-width: 320px;
         margin-left: -16px;
-         
         grid-row: 3;
         
     }
