--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,7 +6,7 @@
     grid-template-rows: repeat(3, min-content);
     column-gap: 40px;
 }
-.place:first{
+.place:first-child{
     margin: 0 auto;
 }
 @media screen and (max-width: 1279px) {
