--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,7 +4,9 @@
     font-weight: 400;
     max-width: 690px;
     margin: 33px 0 0 0;
-}
+    list-style: none;
+    padding: 0;
+    }
 @media screen and (max-width: 1023px) {
     .intro__list {
     min-width: 100%;
