--- a/blocks/cover/__subtitle/cover__subtitile.css
+++ b/blocks/cover/__subtitle/cover__subtitile.css
@@ -4,13 +4,16 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    padding-top: 32px;
     text-align: center;
     z-index: 1;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 767px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 16px;
+        padding-top: 16px;
     }
   }
