--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,6 +9,7 @@
     text-decoration: none;
     color: #fff;
     z-index: 1;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 767px) {
