--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,14 @@
 .footer__copyright{
     margin: 0 0 0 auto;
-
+    font-family: 'Inter';
+    font-size: 14px;
+    line-height: 16px;
 }
 
 @media screen and (max-width: 767px) {
     .footer__copyright {
         padding-top: 16px;
         margin-left: 0;
+        line-height: 14px;
     }
   }
