--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,8 +1,10 @@
 .footer__link{
     margin: 0;
     padding-left: 18px;
-    text-decoration: none;
-    color: #fff;
+    font-family: 'Inter';
+    font-size: 16px;
+    line-height: 18px;
+    
 }
 .footer__link:nth-child(1){
     padding-left: 0;
@@ -11,5 +13,7 @@
     .footer__link{
         padding-left: 0px;
         padding-bottom: 32px;
+        font-size: 24px;
+        line-height: 24px;
     }
   }
