--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,14 @@
 .header__lang-link{
-
+    font-size: 24px;
+    line-height: 28px;
+    font-family: 'Inter';
+    text-decoration: none;
+    color: #fff;
 }
+@media screen and (max-width: 767px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 20px;
+    }
+  }
 
-.header__lang-link:first-child{
- text-decoration: underline;
-}
