--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,6 +5,7 @@
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 1023px) {
