--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,11 @@
 .lead__subtitle{
     max-width: 640px;
-    max-height: 72px;
     text-align: center;
     font-weight: 400;
     font-size: 30px;
     line-height: 36px;
     margin: 0;
+    font-family: 'Inter';
 }
 
 @media screen and (max-width: 320px) {
