--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,13 +1,13 @@
 .lead__title{
     max-width: 720px;
-    max-height: 200px;
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
     text-align: center;
     margin: 56px 0 32px 0;
+    font-family: 'Inter';
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
    .lead__title{
     margin-top: 48px;
 }
@@ -15,10 +15,8 @@
 @media screen and (max-width: 767px) {
     .lead__title{
         max-width: 288px;
-        max-height: 88px;
         margin: 48px 0 16px 0;
         font-size: 40px;
         line-height: 44px;
         }
  }
- 
