--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,6 +1,8 @@
-.place__website__link{
+.place__link{
     color: #fff;
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
+    font-family: 'Inter';
+    text-decoration: underline;
 }
