--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,20 +1,23 @@
 .place__paragraph{
- margin: 0;
- font-family: 'Inter';
- font-weight: 400;
- font-size: 18px;
- line-height: 29.34px;
-
+    margin: 0;
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29.34px;
 }
 .place__paragraph:nth-child(odd){
     margin-top: 26px;
 }
+@media screen and (max-width: 1023px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26.08px;
+    }
+  }
 
 @media screen and (max-width: 767px) {
     .place__paragraph {
-        max-width: 100%;
-        font-size: 16px;
-        line-height: 26.08px;
-
+        width: calc(100% - 16px);
+        
     }
   }
