--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,10 +3,16 @@
     font-size: 72px;
     line-height: 76px;
     margin: 0;
-    align-self: flex-end;
     padding-bottom: 48px;
     max-width: 460px;
+    font-weight: 900;
 }
+@media screen and (max-width: 1023px) {
+    .place__title {
+        font-size: 42px;
+        line-height: 46px;
+    }
+  }
 @media screen and (max-width: 767px) {
     .place__title {
         font-size: 32px;
