--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,4 +3,7 @@
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
+    font-family: 'Inter';
+    font-weight: 400;
+    margin: 0 0 12px 0;
 }
