--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,12 +2,15 @@
     max-width: 100%;
     margin: 80px auto 0 auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 0.95fr 1fr;
     grid-template-rows: repeat(3, min-content);
     column-gap: 40px;
 }
 .place:first-child{
     margin: 0 auto;
+}
+.place:last-child{
+    margin-bottom: 92px;
 }
 @media screen and (max-width: 1279px) {
     .place {
@@ -17,12 +20,14 @@
 @media screen and (max-width: 1023px) {
     .place {
         column-gap: 28px;
+        margin-top: 73px;
     }
   }  
   @media screen and (max-width: 767px) {
     .place {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, fitcontent);
+        margin-top: 50px;
         
     }
     
