--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-
+@import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
 
 @import url(../blocks/page/page.css);
@@ -11,6 +11,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
@@ -37,27 +38,14 @@
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
 
+@import url(../blocks/places/places.css);
+
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitile.css);
+@import url(../blocks/cover/__background/cover__background.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
-
-@font-face {
-    src: url(../fonts/Inter-Regular.woff2) format("woff2");
-    font-family: 'Inter';
-    font-weight: normal;
-}
-@font-face {
-    src: url(../fonts/Inter-Black.woff2) format("woff2");
-    font-family: 'Inter';
-    font-weight: 900;
-}
-
-@font-face {
-    src: url(../fonts/Inter-Bold.woff2) format("woff2");
-    font-family: 'Inter';
-    font-weight: 700;
-}
+@import url(../blocks/footer/__links/footer__links.css);
