--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,7 +5,7 @@
     font-size: 18px;
     line-height: 29.34px;
 }
-.place__paragraph:nth-child(odd){
+.place__paragraph:nth-child(even){
     margin-top: 26px;
 }
 @media screen and (max-width: 1023px) {
@@ -18,6 +18,5 @@
 @media screen and (max-width: 767px) {
     .place__paragraph {
         width: calc(100% - 16px);
-        
     }
   }
