--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,7 @@
     margin: 80px auto 0 auto;
     display: grid;
     grid-template-columns: 0.95fr 1fr;
-    grid-template-rows: repeat(3, min-content);
+    grid-template-rows: repeat(2, min-content);
     column-gap: 40px;
 }
 .place:first-child{
@@ -22,13 +22,18 @@
         column-gap: 28px;
         margin-top: 73px;
     }
+    .place:last-child{
+        margin-bottom: 90px;
+    }
   }  
   @media screen and (max-width: 767px) {
     .place {
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(6, fitcontent);
+        grid-template-rows: repeat(4, min-content);
         margin-top: 50px;
         
     }
-    
+    .place:last-child{
+        margin-bottom: 66px;
+    }    
   }  
