--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -11,7 +11,7 @@
     top: 0; 
     left: 0;
     text-decoration: none;
-    color: #fff
+    color: #fff;
   } 
   
   .cover__background::before { 
@@ -21,7 +21,7 @@
     height: 100%; 
     background-color: #2a2c2f; 
     opacity: 0.3; 
-    transition: opacity  ease-out 1s;
+    transition: opacity ease-out 1s;
   } 
   
   .cover__background:hover::before { 
