BS coding moment

--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 92px auto;
     display: grid;
+    justify-items: center;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     grid-template-rows:  repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
