--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,15 +1,12 @@
 .cover__background { 
     width: 100%;
-    height: 100%;
+    min-height: 720px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
     text-decoration: none;
     color: #fff;
   }
@@ -18,7 +15,7 @@
     position: absolute;
     content: '';
     width: 100%;
-    height: 100%;
+    min-height: 720px;
     background-color: #2a2c2f;
     opacity: 0.3;
     transition: opacity ease-out 1s;
@@ -31,19 +28,35 @@
   @media screen and (max-width: 1184px) { 
     .cover__background {
         margin-left: -48px;
+        min-height: 640px;
         width: calc(100% + 96px);
+    }
+    .cover__background::before { 
+      min-height: 640px;
+      width: calc(100% + 96px);
     }
   }
   @media screen and (max-width: 1023px) {
     .cover__background {
         margin-left: -24px;
+        min-height: 480px;
         width: calc(100% + 48px);
+    }
+    .cover__background::before { 
+      min-height: 480px;
+      width: calc(100% + 48px);
     }
   }
   @media screen and (max-width: 767px) {
     .cover__background {
         margin-left: -16px;
+        min-height: 200px;
         width: calc(100% + 32px);
+        
+    }
+    .cover__background::before { 
+      min-height: 200px;
+      width: calc(100% + 32px);
     }
   }
   
