--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,24 @@
 .cover { 
   max-width: 1184px;
-  padding-bottom: 62.5%;
+  min-height: 720px;
   position: relative;
 } 
 
+@media screen and (max-width: 1279px) {
+  .cover {
+  min-height: 640px;
+  }
+}
 
-@media screen and (max-width: 1279px) { 
-  .cover { 
-    padding-bottom: 69.44%;
-  } 
-} 
+@media screen and (max-width: 1023px) {
+  .cover {
+  min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+  min-height: 200px;
+  }
+}
+
