--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -31,7 +31,7 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(4, min-content);
         margin-top: 50px;
-        
+        max-width: 90%;
     }
     .place:last-child{
         margin-bottom: 66px;
