--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,3 +2,10 @@
     max-width: 984px;
     margin: 0 auto;
 }
+@media screen and (max-width: 767px) {
+    .places {
+        margin-left: -16px;
+        margin-right: -16px;
+        width: calc(100%+32px);
+    }
+  }  
