--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,11 +9,13 @@
     color: #fff;
     font-family: 'Inter';
     z-index: 1;
+    
 }
 
 @media screen and (max-width: 767px) {
     .cover__title {
         font-size: 32px;
         line-height: 35px;
+        max-width: 90%;
     }
   }
