--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,6 +1,11 @@
 .header__lang-links{
     display:flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     column-gap: 18px;
 }
+@media screen and (max-width: 767px) {
+    .header__lang-links {
+        align-items: center;
+    }
+  }
