--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,4 +3,15 @@
     justify-content: space-between;
     max-width: 1184px;
     margin: auto;
+    padding: 0px 48px;
 }
+@media screen and (max-width: 1023px) {
+    .header {
+        padding: 0px 24px;
+    }
+}
+@media screen and (max-width: 767px) {
+    .header {
+        padding: 0px 16px;
+    }
+} 
