--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,3 +5,23 @@
     align-items: flex-start;
     margin: auto;
 }
+@media screen and (max-width: 1023px) {
+    .intro {
+        max-width: 93.75%;
+    }
+  }
+@media screen and (max-width: 1279px) {
+    .intro{
+        max-width: 90.625%;
+}
+}
+@media screen and (max-width: 1279px) {
+    .intro{
+        max-width: 93.75%;
+}
+}
+@media screen and (max-width: 767px) {
+    .intro {
+    max-width: 90%;
+    }
+}
