--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,3 +6,13 @@
     max-width: 984px;
 }
 
+@media screen and (max-width: 1084px) {
+    .lead{
+        max-width: 90.625%;
+}
+}
+@media screen and (max-width: 1023px) {
+    .lead{
+        max-width: 100%;
+}
+}
