--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -12,12 +12,14 @@
 @media screen and (max-width: 1279px) {
     .photo-grid {
         gap:14px;
+        max-width: 90.625%;
     }
   }
 @media screen and (max-width: 1023px) {
     .photo-grid {
         gap:16px;
         margin: 88px auto;
+        max-width: 93.75%;
     }
   }
 
