--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,7 +5,7 @@
     font-size: 18px;
     line-height: 29.34px;
 }
-.place__paragraph:nth-child(even){
+.place__paragraph:nth-child(2){
     margin-top: 26px;
 }
 @media screen and (max-width: 1023px) {
@@ -17,6 +17,7 @@
 
 @media screen and (max-width: 767px) {
     .place__paragraph {
-        width: calc(100% - 16px);
+        max-width: 90%;
+        padding-left: 16px;
     }
   }
