--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,5 +18,7 @@
         font-size: 32px;
         line-height: 35px;
         padding-bottom: 32px;
+        width: 90%;
+        padding-left: 16px;
     }
   }
