--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,5 +5,7 @@
 @media screen and (max-width: 767px) {
     .place__website {
         padding-bottom: 32px;
+        width: 90%;
+        padding-left: 16px;
     }
   }
