--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,9 +2,14 @@
     max-width: 984px;
     margin: 0 auto;
 }
-@media screen and (max-width: 767px) {
-    .places {
-        margin-left: -16px;
-        margin-right: -16px;
-    }
-  }  
+
+@media screen and (max-width: 1279px) {
+    .places{
+        max-width: 90.625%;
+}
+}
+@media screen and (max-width: 1023px) {
+    .places{
+        max-width: 100%;
+}
+}
