--- a/blocks/cover/__subtitle/cover__subtitile.css
+++ b/blocks/cover/__subtitle/cover__subtitile.css
@@ -6,7 +6,7 @@
     line-height: 22px;
     padding-top: 32px;
     text-align: center;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     z-index: 1;
 }
 
