--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,7 +7,7 @@
     text-align: center;
     text-decoration: none;
     color: #fff;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     z-index: 1;
     
 }
