--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,7 @@
 .footer__link{
     margin: 0;
     padding-left: 18px;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     font-size: 16px;
     line-height: 18px;
     
