--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,7 +6,7 @@
     margin: 33px 0 0 0;
     list-style: none;
     padding: 0;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     }
 @media screen and (max-width: 1023px) {
     .intro__list {
