--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,7 +4,7 @@
     font-weight: 400;
     line-height: 26.08px;
     font-size: 16px;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
 }
 
 @media screen and (max-width: 1023px) {
