--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption{
     align-self: flex-start;
     margin: 8px 0 0 0;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     font-weight: 400;
     line-height: 14px;
     font-size: 10px;
