--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,7 @@
     font-size: 30px;
     line-height: 36px;
     margin: 0;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
 }
 
 @media screen and (max-width: 320px) {
