--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
     line-height: 100px;
     text-align: center;
     margin: 56px 0 32px 0;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
 }
 @media screen and (max-width: 1279px) {
    .lead__title{
