--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
     background-color: #2a2c2f;
     padding: 28px 48px;
     color: #fff;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
 }
 @media screen and (max-width: 1279px) {
 .page{
