--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -3,6 +3,6 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     text-decoration: underline;
 }
