--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title{
-    font-family: 'Inter';
+    font-family: Inter, Arial, sans-serif;
     font-size: 72px;
     line-height: 76px;
     margin: 0;
